# etui

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  install.sh  pyproject.toml
config_defaults/: script_folders.toml  settings.toml
src/: main.py
src/etui/: README.md  config.py  file_browser.py  file_utils.py  logging.py  screen_helper.py  scriptlauncher.py  settings.py  tui.py
src/etui/tcss/: file_browser.tcss  scriptlauncher.tcss  settings.tcc  tui.tcss
tests/: test_script.py
