[project]
name = "etui"
version = "0.5.0"
description = "CLI Scriptlauncher in a simple TUI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "textual>=7.0.0",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.uv]
package = true

[project.scripts]
etui = "main:start_tui"
